@@ -56,3 +56,5 @@ int add_deps_to_trans(const rc_config *global_config, transaction_t *tran, struc
 /* check to see if a package is conflicted */
 pkg_info_t *is_conflicted(transaction_t *tran, struct pkg_list *avail_pkgs, struct pkg_list *installed_pkgs, pkg_info_t *pkg);
 
+void generate_suggestions(transaction_t *tran);
+
